--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@tailwindcss/forms": "^0.5.2",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.5.3",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
