--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.3",
