--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.34.2",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.8",
+    "sharp": "^0.31.0",
     "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
