Add admin panel, set up cloudinary for storing images

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.9.1",
+    "cloudinary": "^1.32.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.5.3",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "paytmchecksum": "^1.5.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-redux": "^8.0.2",
