--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.0.8",
     "sharp": "^0.31.0",
