--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.2",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.10.7",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
