--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
-    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "sharp": "^0.31.0",
     "tailwind-scrollbar": "^1.3.1"
