--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "paytmchecksum": "^1.5.0",
+    "pdfkit": "^0.13.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
