--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.7",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/forms": "^0.5.2",
+    "async": "^3.2.4",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.9.1",
