--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.7",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/forms": "^0.5.2",
+    "@tanem/react-nprogress": "^5.0.16",
     "async": "^3.2.4",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -35,7 +36,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "sharp": "^0.31.0",
-    "tailwind-scrollbar": "^1.3.1"
+    "tailwind-scrollbar": "^1.3.1",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
